config/policy/cluster-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-any-cluster-policy
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: cluster-policy-only-can-be-modified-by-specific-public-key
      match:
        any:
          - resources:
              kinds:
                - ClusterPolicy
      validate:
        manifests:
          attestors:
            - count: 1
              entries:
                - keys:
                    publicKeys: |-
                      -----BEGIN PUBLIC KEY-----
                      MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEmnIn28vDRD2e/CvoU1YCNWCOQDB8
[...]
                      -----END PUBLIC KEY-----
