config/policy/deployment-service.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: policy-2
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: validate-deployment
      match:
        any:
          - resources:
              kinds:
                - Deployment
                - Service
      validate:
        manifests:
          attestors:
            - count: 1
              entries:
                - keys:
                    publicKeys: |-
                      -----BEGIN PUBLIC KEY-----
                      MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEmnIn28vDRD2e/CvoU1YCNWCOQDB8
[...]
                      -----END PUBLIC KEY-----
