config/policy/virtual-service.signed.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  annotations:
    cosign.sigstore.dev/bundle: H4sIAAAAAAAA/0ST366jNhCH34XrlYoNZMORerEk4NgnJo2xDfgOMIn5m5yElJDVvnuVbqXe/kYzmvn0zU8rac5jrcNxui28Ger7VAxX68Oiodjg4zac8fjFK+8ryLxVki+vWj33blZPD6DzWtwJcS8Bu/XEnfH5GE63T+cHxTa9PRKRf8369ofz+WVEVdRxFAaCjY+72M24+9P6Zv1VLP2l0NbHT6u86MX6sOqFmAr1qcrIq0j9B24vDd24874Nm/2G3IrU695ZgaJXgWRXDfJWOqTDzdxUTtDnC17VC+nyjBncXr/jwZgKnpvDeG/y9DmWDrlqZKb3jAoaQ1sB3716iO46Fc2hIQOFrI1h6MTbs5tD7OVD1By2x1nx3hx4P9CXMgrR5wExE287T3HsqZZ6hy11KGJGcWPolpkDNy1FwlZp3OER+PvN+yb9yDMGqkH83gn6D43kQ2/wCncg [...]
    cosign.sigstore.dev/message: H4sIAAAAAAAA/2yST4/aMBDF7/kUc69cGnpBkfYAsReidClhy1J6M2ZITRIb+R+w6oevDIvE7vJOo/d7Gb2JzPfyBY2VWmXQnAIapb9K3Qtp0ki1ySBvvXVoZrqV4pR06PiGO54lAIp3mMH+DEia2D2KaK+5aGqjffzYGY8JgPEt2sgIdNyJv3GM4up0HQkYtNobcQleFTu8Mwi8SOM8b5/RBCnwjC5NAm/lhjsk4ZIg9iZyhdddHVdyi9bdLOfOoXXa3FgEhPbKZZDeVEDljMQPrRo8vXOi9n7dSlFGAv/IBwhAokZsXExhthj9KHIo2epsfoo+PTYHdlhNSv2neN19y4fVqnib6bAStKqHrFOF6g8CndM+9vKgF+kqny7znxUdDT4t7I/Xz+OyEE8zJuZuWaYlXdaL8CUf7yZ6ffD1/PXIj8V20vvOyuPvxZLaX2bXDerq4eH+IWxK75z [...]
    cosign.sigstore.dev/signature: MEYCIQDYBEi6u9Q5NY6dZpFV0BPwPTk0q+FcvtPhTA2lo62okwIhAPSnmrKi6IoivAGMHfGJLNzUv0FHt2xVgmXh2oiW/HEn
  name: policy-1
spec:
  background: true
  rules:
  - match:
      any:
      - resources:
          kinds:
          - VirtualService
    name: validate-virtual-service
    validate:
      manifests:
        attestors:
        - count: 1
          entries:
          - keys:
              publicKeys: |-
                -----BEGIN PUBLIC KEY-----
                MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEmnIn28vDRD2e/CvoU1YCNWCOQDB8
[...]
                -----END PUBLIC KEY-----
  validationFailureAction: Enforce
