config/policy/virtual-service.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: policy-1
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: validate-virtual-service
      match:
        any:
          - resources:
              kinds:
                - VirtualService
      validate:
        manifests:
          attestors:
            - count: 1
              entries:
                - keys:
                    publicKeys: |-
                      -----BEGIN PUBLIC KEY-----
                      MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEmnIn28vDRD2e/CvoU1YCNWCOQDB8
[...]
                      -----END PUBLIC KEY-----
